--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "match-sorter": "^7.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-favicon": "^2.0.7",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-tabs": "^6.0.2",
